@@ -47,6 +47,8 @@ function upgrade_to_0_8_7h() {
 		db_execute("ALTER TABLE host ADD COLUMN device_threads tinyint(2) unsigned NOT NULL DEFAULT '1' AFTER max_oids;");
 	}
 
+	db_execute("ALTER TABLE `data_template_rrd` ADD UNIQUE INDEX `duplicate_dsname_contraint`(`local_data_id`, `data_source_name`, `data_template_id`)");
+
 	/* update the reindex cache, as we now introduced more options for "index count changed" */
 	$host_snmp_query = db_fetch_assoc("select host_id,snmp_query_id from host_snmp_query");
 	if (sizeof($host_snmp_query) > 0) {
